--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ title:               The Software Engineering Life Cycle
 #tagline:             'A Jekyll theme'
 # description:         'A reserved <a href="http://jekyllrb.com" target="_blank">Jekyll</a> theme that places the utmost gravity on content with a hidden drawer. Made by <a href="https://twitter.com/mdo" target="_blank">@mdo</a>.'
 url:                 http://www.thesoftwareengineeringlifecycle.com
-baseurl:             '/TheSoftwareEngineeringLifeCycle'
+baseurl:             'http://www.thesoftwareengineeringlifecycle.com/TheSoftwareEngineeringLifeCycle'
 paginate:            5
 
 # About/contact
